--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^7.24.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.3.13",
+    "vuetify": "^2.3.19",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -56,7 +57,6 @@
           "trailingComma": "es5",
           "tabWidth": 4,
           "bracketSameLine": true,
-          "disableLanguage": ["html"],
           "htmlWhitespaceSensitivity": "ignore"
         }
       ],
